--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>Tại sao chọn tiếng Anh thầy Thành</h1>
+    <h2>Những năm đầu tiên của cuộc hành trình</h2>
   </body>
 </html>
