--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Tại sao chọn tiếng Anh thầy Thành</h1>
     <h2>Những năm đầu tiên của cuộc hành trình</h2>
+    <h2>Những năm đầu tiên của sự đổi mới</h2>
   </body>
 </html>
